fix: jumpiness on tab change

--- a/charts/client/chart.scss
+++ b/charts/client/chart.scss
@@ -282,7 +282,7 @@ $zindex-IndicatorDropdown: 50;
             border-top: 1px solid #e1e1e1;
 
             &.active {
-                border-top: none;
+                border-top-color: transparent;
             }
         }
     }
